# px4

./: .gitignore  .gitmodules  Dockerfile  README.MD  tmux.sh
external_modules/backprop_tools_benchmark/: BackpropToolsBenchmark.cpp  BackpropToolsBenchmark.hpp  CMakeLists.txt  Kconfig
external_modules/msg/: CMakeLists.txt  RlToolsCommand.msg  RlToolsMultiplexerStatus.msg  RlToolsPolicyHeartbeat.msg  RlToolsPolicyInput.msg  RlToolsPolicyStatus.msg
external_modules/src/: CMakeLists.txt
external_modules/src/modules/actuator_motors_multiplexer/: CMakeLists.txt  actuator_motors_multiplexer.cpp  actuator_motors_multiplexer.hpp  module.yaml
external_modules/src/modules/backprop_tools_benchmark/: BackpropToolsBenchmark.cpp  BackpropToolsBenchmark.hpp  CMakeLists.txt  Kconfig
external_modules/src/modules/rl_tools_benchmark/: CMakeLists.txt  Kconfig  RLtoolsBenchmark.cpp  RLtoolsBenchmark.hpp  model.h
external_modules/src/modules/rl_tools_commander/: CMakeLists.txt  RLtoolsCommander.cpp  RLtoolsCommander.hpp  module.yaml
external_modules/src/modules/rl_tools_policy/: CMakeLists.txt  RLtoolsPolicy.cpp  RLtoolsPolicy.hpp  build_model_test.sh  crazyflie_sih.params  model.h  model_test.cpp  rl_tools_adapter.cpp
external_modules/src/modules/rl_tools_policy/params/: crazyflie_sih.params  x500_sih.params
params/: race-jonas.params  race2.params  race6.params  x500.params
setup/: RACE.md
sysid/: .gitignore  README.MD  analylze_ui.py  analyze.ipynb  analyze.py  analyze_new.ipynb  analyze_policy.ipynb  model.json  process.py  quadrotor_inertias.csv  trajectory_plot.jl
sysid/geometry/: fs.py  race6.py  x500.py
sysid/logs/: .gitignore
sysid/static/: index.html  main.js
tools/external_position_reference/: README.MD  forward_ros_to_mavlink.py
